# KalshiPredictionAgent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: find_econ.py  find_econ_markets.py  find_liquid.py
src/kalshi_agents/: __init__.py  cli.py  config.py
src/kalshi_agents/agents/: __init__.py  base.py  events_calendar.py  graph.py  kalshi_graph.py  social_media.py  speech_analysis.py  tools.py
src/kalshi_agents/agents/analysts/: base_rate.py  microstructure.py  news.py  public_signal.py
src/kalshi_agents/decision/: __init__.py  sizing.py
src/kalshi_agents/kalshi/: __init__.py  client.py  models.py
src/kalshi_agents/storage/: __init__.py  db.py
src/kalshi_agents/web/: app.py  settings_store.py
tests/: test_calibration.py  test_events_calendar.py  test_kalshi_graph.py  test_kalshi_models.py  test_sizing.py  test_social_media.py  test_speech_analysis.py
