[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-agents"
version = "0.1.0"
description = "Multi-agent buy/no-buy signal generator for Kalshi event-contract markets."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "bjbab" }]
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "cryptography>=42",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
agents = [
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-openai>=0.1",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
]

[project.scripts]
kalshi-agents = "kalshi_agents.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
